Grace/tests/gibbs/errors/t092.grace
// ERROR = P1006
def numPokemon := 151
